--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1> Hi! Welcome to my website! </h1> 
         <p> <a href = 2ndpage.html> About me </a> </p>
         <hr>
-        <p> Isn't it <strong>awesome?</strong> <em>italicized?</em> </p>
+        <p> Isn't it <strong>awesome??</strong> <em>italicized?</em> </p>
         <h1> <a href = "http://nate.com"> <img src="cat.jpg" width = "420" column = "315"> </a></h1>
         <p> <a href="http://google.com">The whole Internet </a></p>
         <h1> 
