--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <hr>
         <p> Isn't it <strong>awesome??</strong> <em>italicized?</em> </p>
         <h1> <a href = "http://nate.com"> <img src="cat.jpg" width = "420" column = "315"> </a></h1>
-        <p> <a href="http://amazon.com">The whole Internet </a></p>
+        <p> <a href="http://www.amazon.com">The whole Internet </a></p>
         <h1> 
                 <iframe width="420" height="315"
                 src="https://www.youtube.com/embed/YE7VzlLtp-4">
