--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <head>
         <title> Jay's webpage </title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -49,3 +50,4 @@
     </body>
 
 </html>
+
