--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1> Hi! Welcome to my website! </h1> 
         <p> <a href = 2ndpage.html> About me </a> </p>
         <hr>
-        <p> Isn't it <strong>awesome??</strong> <em>italicized?</em> </p>
+        <p id="first"> Isn't it <strong>awesome??</strong> <em>italicized?</em> </p>
         <h1> <a href = "http://nate.com"> <img src="cat.jpg" width = "420" column = "315"> </a></h1>
-        <p> <a href="http://www.amazon.com">The whole Internet </a></p>
+        <p id="second"> <a href="http://www.amazon.com">The whole Internet </a></p>
         <h1> 
                 <iframe width="420" height="315"
                 src="https://www.youtube.com/embed/YE7VzlLtp-4">
@@ -35,7 +35,7 @@
                         </tr>
                 </table>
         </p>
-        <p>
+        <p id="list">
                 <ol>
                         <li>One</li>
                         <li>Two</li>
