--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href = "http://nate.com"> 
                 <img class="class" src="cat.jpg"> 
         </a>
-        
+        <link rel="stylesheet" href="styles.css">
         <img class = "class" src="image.jpg">
 
         <p id="second"> <a href="http://www.amazon.com">The whole Internet </a></p>
