--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <DOCTYPE html></DOCTYPE>
 
 <html>
+<link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1> Hi! Welcome to my website! </h1> 
