--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <h1> Hi! Welcome to my website! </h1> 
-        <p> <a href = 2ndpage.html> About me </a> </p>
-        <p> <a href = Bootstrap.html> Shop </a> </p>
+        <p class="hyperlinks"> <a href = 2ndpage.html> About me </a> </p>
+        <p class="hyperlinks"> <a href = Bootstrap.html> Shop </a> </p>
         <hr>
         <p id="first"> Isn't it <strong>awesome??</strong> <em>italicized?</em> </p>
         
